--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,11 +1,26 @@
+h1{
+    margin-top:0px;
+}
+hr{
+    margin-top:10px;
+    margin-bottom:10px;
+}
+
+
+.kv-avatar .file-preview-frame,.kv-avatar .file-preview-frame:hover {
+    margin: 0;
+    padding: 0;
+    border: none;
+    box-shadow: none;
+    text-align: center;
+}
+.kv-avatar .file-input {
+    display: table-cell;
+    max-width: 220px;
+}
+
 @media only screen and (max-width: 480px) {
-
-	h1{
-		margin-top:0px;
-	}
-
-	.page-header{
-		margin-top:0px;
-	}
-
+    .page-header{
+        margin-top:0px;
+    }
 }
