--- a/web/css/style.css
+++ b/web/css/style.css
@@ -41,3 +41,7 @@ hr{
 body {
     background-color: #eee;
 }
+
+.datepicker-months,.datepicker-years,.datepicker-decades,.datepicker-centuries{
+    width:320px;
+}
